Warmer border color

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,6 @@
 body {
     padding: 10px;
-    border: solid 5px #e7f3fa;
+    border: solid 5px #fcfbe8;
     background-image: url(../img/background.jpeg);
 }
 
