New button styling, plus updated Readme

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,7 +34,10 @@ button,
 #btn-scripts,
 #btn-uc-data,
 #btn-inject-cmp {
-    background-color: #0045a5;
-    color: white;
-    border-radius: 5px;
+    background-color: #157cac;
+    color: rgb(243, 249, 250);
+    border-radius: 12px;
+    border-color: rgb(233, 222, 248);
+    font-size: 14px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
