--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -24,14 +24,16 @@ button,
 #get-uc-data,
 #get-scripts,
 #get-consents,
-#get-config {
+#get-config,
+#inject-cmp {
     padding: 5px;
 }
 
 #btn-data-layer,
 #btn-consents,
 #btn-scripts,
-#btn-uc-data {
+#btn-uc-data,
+#btn-inject-cmp {
     background-color: #157cac;
     color: rgb(243, 249, 250);
     border-radius: 12px;
@@ -40,7 +42,8 @@ button,
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-#btn-inject-cmp {
+
+/* #btn-inject-cmp {
     width: 100px;
     background-color: #157cac;
     color: rgb(243, 249, 250);
@@ -57,8 +60,9 @@ button,
     border-radius: 7px;
     text-align: center;
     height: 35px;
-}
+} 
 
 #inject-cmp {
     margin-left: 5px;
 }
+*/
